--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
         <button class="carousel-btn right-btn">❯</button>
         <div class="carousel-track">
             <div class="carousel-item active">
-                <img src="image/lunbo1.jpg" alt="魔法玩偶系列">
+                <img src="lunbo1.jpg" alt="魔法玩偶系列">
                 <div class="carousel-caption">
                     <h3>✨ 星光精灵系列 ✨</h3>
                     <p>夜光材质 | 可换装设计 | 会唱摇篮曲</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="image/lunbo2.jpg" alt="公主系列">
+                <img src="lunbo2.jpg" alt="公主系列">
                 <div class="carousel-caption">
                     <h3>👑 梦幻公主城堡 👑</h3>
                     <p>配首饰盒 | 磁吸换装 | 丝绸礼服</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="image/lunbo3.jpg" alt="动物伙伴">
+                <img src="lunbo3.jpg" alt="动物伙伴">
                 <div class="carousel-caption">
                     <h3>🐾 森林小伙伴 🐾</h3>
                     <p>会讲故事 | 毛绒手感 | 安全材质</p>
