--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
                 <div class="search-box">
                     <input type="text" placeholder="搜索玩偶...">
-                    <button type="submit"><img src="image/搜索图标png.png" alt="搜索"></button>
+                    <button type="submit"><img src="搜索图标png.png" alt="搜索"></button>
                 </div>
             </div>
         </nav>>
