--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <!-- 导航栏 -->
         <nav class="navbar">
             <div class="nav-container">
-                <a href="#" class="logo">梦幻玩偶</a>
+                <a href="index.html" class="logo">梦幻玩偶</a>
                 <div class="nav-links">
-                    <a href="#products">产品系列</a>
-                    <a href="#about">关于我们</a>
+                    <a href="chanping.html">产品系列</a>
+                    <a href="guanyuwomen.html">关于我们</a>
                     <a href="#custom">定制服务</a>
                     <a href="#contact">联系我们</a>
                 </div>
