--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
         <div class="gallery-container">
             <div class="gallery-header">
                 <a href="index.html#products" class="back-link">
-                    <i class="fas fa-arrow-left"></i> 返回系列列表
+                    <i class="fas fa-arrow-left"></i> 返回
                 </a>
                 <h1 class="gallery-title">🧚♀️ 童话精灵图鉴</h1>
             </div>
