--- a/guanyuwomen.html
+++ b/guanyuwomen.html
@@ -11,31 +11,32 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-        <!-- 动态效果容器 -->
-    <div class="animation-container">
-        <!-- 月亮 -->
-        <div class="moon"></div>
-        <!-- 星星 -->
-        <div class="stars"></div>
-        <!-- 新增粒子容器 -->
-        <div class="craft-particles"></div> 
-    </div>
-    <!-- 导航栏 -->
-    <nav class="navbar">
-        <div class="nav-container">
-            <a href="index.html" class="logo">梦幻玩偶</a>
-            <div class="nav-links">
-                <a href="chanping.html">产品系列</a>
-                <a href="#guanyuwomen.html">关于我们</a>
-                <a href="#custom">定制服务</a>
-                <a href="#contact">联系我们</a>
-            </div>
-            <div class="search-box">
-                <input type="text" placeholder="搜索玩偶...">
-                <button type="submit"><img src="image/搜索图标png.png" alt="搜索"></button>
-            </div>
+            <!-- 动态效果容器 -->
+        <div class="animation-container">
+            <!-- 月亮 -->
+            <div class="moon"></div>
+            <!-- 星星 -->
+            <div class="stars"></div>
+            <!-- 新增粒子容器 -->
+            <div class="craft-particles"></div> 
         </div>
-    </nav>
+        <!-- 导航栏 -->
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="index.html" class="logo">梦幻玩偶</a>
+                <button class="mobile-menu-btn">☰</button>
+                <div class="nav-links">
+                    <a href="chanping.html">产品系列</a>
+                    <a href="guanyuwomen.html">关于我们</a>
+                    <a href="#custom">定制服务</a>
+                    <a href="#contact">联系我们</a>
+                </div>
+                <div class="search-box">
+                    <input type="text" placeholder="搜索玩偶...">
+                    <button type="submit"><img src="image/搜索图标png.png" alt="搜索"></button>
+                </div>
+            </div>
+        </nav>
 
     <!-- 品牌故事 - 中式对称布局 -->
     <section class="content-section" id="about">
