--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <a href="index.html" class="logo">梦幻玩偶</a>
+                <button class="mobile-menu-btn">☰</button>
                 <div class="nav-links">
                     <a href="chanping.html">产品系列</a>
                     <a href="guanyuwomen.html">关于我们</a>
