--- a/chanping.html
+++ b/chanping.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -10,22 +11,23 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-    <!-- 导航栏 -->
-    <nav class="navbar">
-        <div class="nav-container">
-            <a href="index.html" class="logo">梦幻玩偶</a>
-            <div class="nav-links">
-                <a href="#products">产品系列</a>
-                <a href="guanyuwomen.html">关于我们</a>
-                <a href="#custom">定制服务</a>
-                <a href="#contact">联系我们</a>
+        <!-- 导航栏 -->
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="index.html" class="logo">梦幻玩偶</a>
+                <button class="mobile-menu-btn">☰</button>
+                <div class="nav-links">
+                    <a href="chanping.html">产品系列</a>
+                    <a href="guanyuwomen.html">关于我们</a>
+                    <a href="#custom">定制服务</a>
+                    <a href="#contact">联系我们</a>
+                </div>
+                <div class="search-box">
+                    <input type="text" placeholder="搜索玩偶...">
+                    <button type="submit"><img src="image/搜索图标png.png" alt="搜索"></button>
+                </div>
             </div>
-            <div class="search-box">
-                <input type="text" placeholder="搜索玩偶...">
-                <button type="submit"><img src="image/搜索图标png.png" alt="搜索"></button>
-            </div>
-        </div>
-    </nav>
+        </nav>
 
     <!-- 产品展示区块 -->
     <section class="theme-section" id="products">
@@ -36,42 +38,42 @@
             </h2>
             <div class="product-grid">
                 <div class="gallery-item">
-                    <img src="image/fairy1.jpg" alt="水晶梦幻玩偶">
+                    <img src="image/cp1.jpg" alt="水晶梦幻玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">水晶梦幻玩偶</h3>
                         <p class="product-description">以水晶为主要装饰元素，打造透明梦幻的玩偶形象。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product2.jpg" alt="复古华丽玩偶">
+                    <img src="image/cp2.jpg" alt="复古华丽玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">复古华丽玩偶</h3>
                         <p class="product-description">模仿古代贵族风格，穿着华丽复古的服饰，细节考究。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product3.jpg" alt="艺术创意玩偶">
+                    <img src="image/cp3.jpg" alt="艺术创意玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">艺术创意玩偶</h3>
                         <p class="product-description">与艺术家合作，具有独特的艺术风格和创意设计。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="image/fairy2.jpg" alt="奢华宝石玩偶">
+                    <img src="image/cp4.jpg" alt="奢华宝石玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">奢华宝石玩偶</h3>
                         <p class="product-description">镶嵌各类宝石，增添玩偶的奢华感和收藏价值。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product5.jpg" alt="丝绸娃娃">
+                    <img src="image/cp5.jpg" alt="丝绸娃娃">
                     <div class="image-caption">
                         <h3 class="product-title">丝绸娃娃</h3>
                         <p class="product-description">采用高品质丝绸面料制作，质感柔软光滑，形象优雅。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product6.jpg" alt="节日限定玩偶">
+                    <img src="image/cp6.jpg" alt="节日限定玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">节日限定玩偶</h3>
                         <p class="product-description">根据不同的节日推出特定主题的玩偶，如圣诞、新年等。</p>
@@ -87,42 +89,42 @@
             </h2>
             <div class="product-grid">
                 <div class="gallery-item">
-                    <img src="product7.jpg" alt="十二星座守护灵玩偶">
+                    <img src="image/xz1.jpg" alt="十二星座守护灵玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">十二星座守护灵玩偶</h3>
                         <p class="product-description">以十二星座的守护灵为原型，设计独特的玩偶形象。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product8.jpg" alt="星座魔法少女玩偶">
+                    <img src="image/xz2.jpg" alt="星座魔法少女玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">星座魔法少女玩偶</h3>
                         <p class="product-description">结合魔法少女元素，每个玩偶代表一个星座的魔法少女形象。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product9.jpg" alt="星象仪投影玩偶">
+                    <img src="image/xz3.jpg" alt="星象仪投影玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">星象仪投影玩偶</h3>
                         <p class="product-description">玩偶带有星象仪功能，能在墙上投射星座图案。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product10.jpg" alt="占星师玩偶">
+                    <img src="image/xz4.jpg" alt="占星师玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">占星师玩偶</h3>
                         <p class="product-description">以占星师为主题，玩偶可搭配星盘、塔罗牌等道具。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product11.jpg" alt="星座精灵玩偶">
+                    <img src="image/xz5.jpg" alt="星座精灵玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">星座精灵玩偶</h3>
                         <p class="product-description">设计成可爱的小精灵形象，每个精灵代表一个星座的特质。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product12.jpg" alt="魔法星盘玩偶">
+                    <img src="image/xz6.jpg" alt="魔法星盘玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">魔法星盘玩偶</h3>
                         <p class="product-description">将星盘元素融入玩偶设计，玩偶可展示不同的星座运势。</p>
@@ -138,42 +140,42 @@
             </h2>
             <div class="product-grid">
                 <div class="gallery-item">
-                    <img src="product13.jpg" alt="未来科技工程师玩偶">
+                    <img src="image/zy1.jpg" alt="未来科技工程师玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">未来科技工程师玩偶</h3>
                         <p class="product-description">穿着未来感的科技服装，手持工具，展现工程师风貌。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product14.jpg" alt="超级英雄玩偶">
+                    <img src="image/zy2.jpg" alt="超级英雄玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">超级英雄玩偶</h3>
                         <p class="product-description">以各种超级英雄为主题，展现他们的独特能力和英雄气质。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product15.jpg" alt="医生护士玩偶">
+                    <img src="image/zy3.jpg" alt="医生护士玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">医生护士玩偶</h3>
                         <p class="product-description">穿着医疗服装，配备医疗道具，培养孩子对医疗职业的认知。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product16.jpg" alt="艺术家玩偶">
+                    <img src="image/zy4.jpg" alt="艺术家玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">艺术家玩偶</h3>
                         <p class="product-description">以画家、雕塑家等艺术家为主题，玩偶可带有画板、调色盘等道具。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product17.jpg" alt="消防员与警察玩偶">
+                    <img src="image/zy5.jpg" alt="消防员与警察玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">消防员与警察玩偶</h3>
                         <p class="product-description">设计消防员和警察形象，配备相应装备，体现职业特点。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product18.jpg" alt="太空探索者玩偶">
+                    <img src="image/zy6.jpg" alt="太空探索者玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">太空探索者玩偶</h3>
                         <p class="product-description">以宇航员为主题，穿着太空服，展现太空探索的神秘与伟大。</p>
@@ -189,42 +191,42 @@
             </h2>
             <div class="product-grid">
                 <div class="gallery-item">
-                    <img src="product19.jpg" alt="神秘森林精灵玩偶">
+                    <img src="image/qh1.jpg" alt="神秘森林精灵玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">神秘森林精灵玩偶</h3>
                         <p class="product-description">以森林精灵为主题，玩偶形象灵动可爱，带有森林元素。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product20.jpg" alt="深海神秘生物玩偶">
+                    <img src="image/qh2.jpg" alt="深海神秘生物玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">深海神秘生物玩偶</h3>
                         <p class="product-description">以深海生物为原型，设计成色彩斑斓、造型奇特的玩偶。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product21.jpg" alt="魔法飞龙玩偶">
+                    <img src="image/qh3.jpg" alt="魔法飞龙玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">魔法飞龙玩偶</h3>
                         <p class="product-description">以飞龙为主题，玩偶形象威武，带有翅膀和魔法元素。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product22.jpg" alt="幽灵与魔法怪兽玩偶">
+                    <img src="image/qh4.jpg" alt="幽灵与魔法怪兽玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">幽灵与魔法怪兽玩偶</h3>
                         <p class="product-description">以幽灵和怪兽为主题，设计成神秘而有趣的玩偶形象。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product23.jpg" alt="独角兽与飞马玩偶">
+                    <img src="image/qh5.jpg" alt="独角兽与飞马玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">独角兽与飞马玩偶</h3>
                         <p class="product-description">以独角兽和飞马为主题，形象高贵优雅，带有魔法光环。</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="product24.jpg" alt="沙漠宝藏守护者玩偶">
+                    <img src="image/qh6.jpg" alt="沙漠宝藏守护者玩偶">
                     <div class="image-caption">
                         <h3 class="product-title">沙漠宝藏守护者玩偶</h3>
                         <p class="product-description">以沙漠生物为原型，设计成守护宝藏的玩偶形象，带有沙漠元素。</p>
