--- a/chanping.html
+++ b/chanping.html
@@ -17,10 +17,20 @@
                 <a href="index.html" class="logo">梦幻玩偶</a>
                 <button class="mobile-menu-btn">☰</button>
                 <div class="nav-links">
-                    <a href="chanping.html">产品系列</a>
+                   
+                    <div class="dropdown">
+                        <a href="chanping.html" class="dropbtn">产品系列 ▼</a>
+                        <div class="dropdown-content">
+                            <a href="#jingpin">精品玩偶系列</a>
+                            <a href="#xingzuo">魔法星座系列</a>
+                            <a href="#zhiye">职业梦想系列</a>
+                            <a href="#qihuan">奇幻生物系列</a>
+                        </div>
+                    </div>
                     <a href="guanyuwomen.html">关于我们</a>
                     <a href="#custom">定制服务</a>
                     <a href="#contact">联系我们</a>
+                    <a href="login.html">登录</a>
                 </div>
                 <div class="search-box">
                     <input type="text" placeholder="搜索玩偶...">
@@ -33,6 +43,7 @@
     <section class="theme-section" id="products">
         <!-- 精品玩偶系列 -->
         <div class="theme-group">
+            <div class="theme-group" id="jingpin">
             <h2 class="theme-title sparkle-text">
                 <i class="fas fa-star"></i> 精品玩偶系列 <i class="fas fa-star"></i>
             </h2>
@@ -81,9 +92,11 @@
                 </div>
             </div>
         </div>
+        </div>
 
         <!-- 魔法星座系列 -->
         <div class="theme-group constellation">
+            <div class="theme-group constellation" id="xingzuo">
             <h2 class="theme-title">
                 <i class="fas fa-moon"></i> 魔法星座系列 <i class="fas fa-moon"></i>
             </h2>
@@ -132,9 +145,11 @@
                 </div>
             </div>
         </div>
+        </div>
 
         <!-- 职业梦想系列 -->
         <div class="theme-group career">
+            <div class="theme-group career" id="zhiye">
             <h2 class="theme-title">
                 <i class="fas fa-graduation-cap"></i> 职业梦想系列 <i class="fas fa-graduation-cap"></i>
             </h2>
@@ -183,9 +198,11 @@
                 </div>
             </div>
         </div>
+        </div>
 
         <!-- 奇幻生物系列 -->
         <div class="theme-group fantasy">
+            <div class="theme-group fantasy" id="qihuan"></div>
             <h2 class="theme-title">
                 <i class="fas fa-dragon"></i> 奇幻生物系列 <i class="fas fa-dragon"></i>
             </h2>
@@ -234,6 +251,8 @@
                 </div>
             </div>
         </div>
+        </div>
+        
     </section>
 
     <!-- 新增波浪分隔线 -->
