--- a/video.html
+++ b/video.html
@@ -40,7 +40,7 @@
             ✨ 工坊视频展示 ✨
         </h2>
         <video class="video-player" controls muted playsinline>
-            <source src="https://github.com/linmolife/li/video/xiaoxiong.mp4" type="video/mp4">
+            <source src="video/xiaoxiong.mp4" type="video/mp4">
         </video>
         <div style="margin-top: 30px; text-align: center;"> </div>
     </div>
