--- a/video.html
+++ b/video.html
@@ -40,7 +40,7 @@
             ✨ 工坊视频展示 ✨
         </h2>
         <video class="video-player" controls muted playsinline>
-            <source src="video/xiaoxiong.mp4" type="video/mp4">
+            <source src="https://vdse.bdstatic.com//280756d36463d7dd9460e18d149352f4.mp4?authorization=bce-auth-v1%2F40f207e648424f47b2e3dfbb1014b1a5%2F2025-03-30T22%3A30%3A20Z%2F-1%2Fhost%2Facd51aac06b409196a854e84c054f684543ffd4de651afbf3d3fcb2c18ad0ca5&vid=2040471320074729324" type="video/mp4">
         </video>
         <div style="margin-top: 30px; text-align: center;"> </div>
     </div>
